[package]
name = "one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2"}
tokio = { version = "1.13.0", features = ["full"]}
tower = { version = "*", features = ["full"]}
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
