[package]
name = "one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2"}
tokio = { version = "1.34.0", features = ["full"]}
tower-layer = "0.3.2"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.tower]
version = "0.4.13"
features = ["util", "timeout", "limit", "load-shed"]

[dependencies.tower-http]
version = "0.5.0"
features = [
  "add-extension",
  "auth",
  "compression-full",
  "limit",
  "trace"
]

